--- a/Personaje_Saludando_Manuel_Open_Source.html
+++ b/Personaje_Saludando_Manuel_Open_Source.html
@@ -82,7 +82,7 @@
         <!-- Model source: https://sketchfab.com/3d-models/spinosaurus-2135501583704537907645bf723685e7
              Model author: https://sketchfab.com/VapTor
              Model license: CC Attribution -->
-        <a-asset-item id="avatar" src="avatar.glb" response-type="arraybuffer"></a-asset-item>
+        <a-asset-item id="avatar" src="Manuel_Saludando_001.glb" response-type="arraybuffer"></a-asset-item>
       </a-assets>
       
       <a-camera position="0 1.2 0"></a-camera>
